--- a/style.css
+++ b/style.css
@@ -1,16 +1,59 @@
+
 body {
 background: #f9e933;
 }
+
 header, main, footer {
 min-width: 855px;
 }
+
 header .container, main .container, footer .container {
 max-width: 855px;
 margin: auto;
 }
+
 header {
 background: white;
+overflow: auto;
+	padding: 10px;
 }
+header h1 {
+float: left;
+width: 570px;
+}
+header nav {
+float: right;
+width: 285px;
+}
+
+
 main {
 background: white;
+overflow: auto;
+}
+
+
+main .light {
+	float: right;
+	width: 285px;
+}
+
+main .main-text {
+float: left;
+width: 570px;
+}
+
+footer {
+	overflow: auto;
+}
+
+footer .contact-info {
+float: left;
+width: 570px;
+
+}
+
+footer .sitemap {
+	float: right;
+	width: 285px;
 }
