--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 
 body {
 background: #f9e933;
+font-family: 'Droid sans';
+font-size: 90%;
 }
 
 header, main, footer {
@@ -18,6 +20,8 @@ overflow: auto;
 	padding: 10px;
 }
 h1 {
+font-family: Ubuntu;
+font-size: 125%;
 float: left;
 width: 570px;
 }
@@ -56,4 +60,9 @@ width: 570px;
 footer .sitemap {
 	float: right;
 	width: 285px;
+}
+
+h2, h3, h4 {
+	font-family: Ubuntu;
+	font-size: 125%;
 }
