--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ width: 285px;
 main {
 background: white;
 overflow: auto;
+padding: 20px;
 }
 
 
@@ -47,8 +48,26 @@ float: left;
 width: 570px;
 }
 
+main .main-text p{
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+main h2 {
+	font-size: 125%;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+main h3 {
+	margin-top: 10px;
+	margin-bottom: 5px;	
+}
+
+
 footer {
-	overflow: auto;
+	
+	width: 100%;
+	height: 80px;
 }
 
 footer .contact-info {
@@ -65,4 +84,13 @@ footer .sitemap {
 h2, h3, h4 {
 	font-family: Ubuntu;
 	font-size: 125%;
+}
+
+a {
+	text-decoration: none;
+	color: red;
+}
+a:hover {
+	text-decoration: underline;
+	color: red;
 }
