--- a/style.css
+++ b/style.css
@@ -2,22 +2,25 @@
 body {
 background: #f9e933;
 font-family: 'Droid sans';
-font-size: 90%;
+margin: 0;
+padding: 0;
+font-size: 90%; 
+height: 100%;
+  
 }
 
-header, main, footer {
-min-width: 855px;
-}
 
-header .container, main .container, footer .container {
+.container{
+width: 100%x;
 max-width: 855px;
-margin: auto;
+margin: 0 auto;
+height: 60px;
 }
 
 header {
 background: white;
 overflow: auto;
-	padding: 10px;
+padding: 10px;
 }
 h1 {
 font-family: Ubuntu;
@@ -33,8 +36,8 @@ width: 285px;
 
 main {
 background: white;
-overflow: auto;
-padding: 20px;
+width: 100%;
+height: 500px;
 }
 
 
@@ -46,6 +49,7 @@ main .light {
 main .main-text {
 float: left;
 width: 570px;
+
 }
 
 main .main-text p{
@@ -65,15 +69,13 @@ main h3 {
 
 
 footer {
-	
 	width: 100%;
-	height: 80px;
+	height: 150px;
 }
 
 footer .contact-info {
 float: left;
 width: 570px;
-
 }
 
 footer .sitemap {
@@ -93,4 +95,13 @@ a {
 a:hover {
 	text-decoration: underline;
 	color: red;
+}
+
+ul li{
+	list-style: none;
+}
+
+ul{
+	margin: 0;
+	padding: 0;
 }
